# AIE-BLAS

./: README.md
aieblas/: CMakeLists.txt  configure.sh
aieblas/cmake/: check_format.cmake  check_source_code.cmake
aieblas/include/aieblas/: codegen.hpp
aieblas/include/aieblas/detail/: util.hpp
aieblas/include/aieblas/detail/codegen/: config.hpp  datastructures.hpp  generator.hpp  graph.hpp  json_parser.hpp  kernels.hpp
aieblas/include/aieblas/detail/codegen/json_parser/: get_kernel_options.hpp
aieblas/include/aieblas/detail/codegen/kernels/: asum.hpp  axpy.hpp  dot.hpp  gemv.hpp  iamax.hpp  nrm2.hpp  rot.hpp  scal.hpp  scale.hpp
aieblas/include/aieblas/detail/codegen/kernels/parsers/: asum.hpp  axpy.hpp  dot.hpp  gemv.hpp  iamax.hpp  nrm2.hpp  rot.hpp  scal.hpp
aieblas/include/aieblas/detail/util/: cxx_compat.hpp  logging.hpp  timer.hpp
aieblas/src/codegen/: codegen.cpp  generator.cpp  json_parser.cpp  standalone.cpp
aieblas/src/codegen/cmake/: generate_cmake.cpp
aieblas/src/codegen/config/: generate_config.cpp
aieblas/src/codegen/graph/: generate_graph.cpp
aieblas/src/codegen/json_parser/: get_kernel_options.cpp  json_parser.cpp
aieblas/src/codegen/kernels/: generate_kernels.cpp  get_kernel_generator.cpp
aieblas/src/codegen/kernels/impl/: asum.cpp  axpy.cpp  dot.cpp  gemv.cpp  iamax.cpp  nrm2.cpp  rot.cpp  scal.cpp  scale.cpp
aieblas/src/codegen/pl_kernels/: generate_pl_kernels.cpp
aieblas/src/util/: logging.cpp
benchmark/combined_routines/axpy_dot/: .gitignore  aieblas.json
benchmark/combined_routines/axpy_dot/include/: timer.hpp
benchmark/combined_routines/axpy_dot/src/: host.cpp
benchmark/combined_routines/axpy_dot_separate/: CMakeLists.txt  aieblas.json  build.sh
benchmark/combined_routines/axpy_dot_separate/src/: host.cpp
benchmark/combined_routines/sum_vectors/: aieblas.json
benchmark/combined_routines/sum_vectors/include/: cxx_compat.hpp
benchmark/combined_routines/sum_vectors/src/: host.cpp
benchmark/combined_routines/sum_vectors_one_pl/: build.sh
benchmark/combined_routines/sum_vectors_one_pl/src/: host.cpp
benchmark/cpu/: install_blas.sh
benchmark/cpu/axpydot/: CMakeLists.txt
benchmark/cpu/axpydot/src/: axpydot.cpp
benchmark/cpu/gemv/: CMakeLists.txt  cmake
benchmark/cpu/gemv/src/: gemv.cpp
benchmark/cpu/sum_vectors_cpu/: CMakeLists.txt
benchmark/cpu/sum_vectors_cpu/src/: sum_vectors.cpp
benchmark/single_routines/axpy/: aieblas.json
benchmark/single_routines/axpy/include/: write_results.hpp
benchmark/single_routines/axpy/src/: host.cpp
benchmark/single_routines/gemv/: aieblas.json
benchmark/single_routines/gemv/src/: host.cpp
benchmark/util/: build-all.sh  quick-reset-aie
benchmark/util/include/: write_results.hpp
blueprints/dot/single/: dot.cpp  dot.hpp
blueprints/dot/vector/: dot.cpp
blueprints/gemv/: CMakeLists.txt  link.cfg
blueprints/gemv/aie/: graph.hpp
blueprints/gemv/aie/kernels/: gemv.cpp  gemv.hpp
blueprints/gemv/pl_kernels/: gemv_mm2s_A.cpp  gemv_mm2s_scalar.cpp  gemv_mm2s_x.cpp  gemv_mm2s_y.cpp  gemv_s2mm.cpp
blueprints/gemv/sw/: host.cpp
blueprints/gemv_tiling/: link.cfg
blueprints/gemv_tiling/aie/: graph.cpp  graph.hpp
blueprints/gemv_tiling/aie/kernels/: gemv.cpp  gemv.hpp
blueprints/gemv_tiling/pl_kernels/: gemv_mm2s_A.cpp  gemv_mm2s_scalar.cpp  gemv_mm2s_x.cpp  gemv_s2mm.cpp
blueprints/gemv_tiling/sw/: CMakeLists.txt  host.cpp
blueprints/rot/single/aie/: rot.cpp
blueprints/rot/vector/aie/: rot.cpp  rot.hpp
blueprints/scal/single/aie/: scal.cpp
blueprints/scal/vector/aie/: scal.cpp  scal.hpp
blueprints/scale/: Makefile  README.md  link.cfg
blueprints/scale/aie/: graph.cpp  graph.h
blueprints/scale/aie/kernels/: scale.cpp  scale.h
blueprints/scale/data/: gen_data.py  golden.txt  input.txt
blueprints/scale/pl_kernels/: mm2s.cpp  s2mm.cpp
blueprints/scale/sw/: ground_truth.h  host.cpp
test/codegen/: example.json
verification/: OpenBLAS  build-all.sh  install_blas.sh
verification/asum/: CMakeLists.txt  aieblas.json
verification/asum/src/: host.cpp
verification/axpy/: CMakeLists.txt  aieblas.json
verification/axpy/src/: host.cpp
verification/dot/: CMakeLists.txt  aieblas.json
verification/dot/include/: cxx_compat.hpp
verification/dot/src/: host.cpp
verification/gemv/: CMakeLists.txt  aieblas.json  cmake
verification/gemv/include/: timer.hpp
verification/gemv/src/: host.cpp
verification/iamax/: CMakeLists.txt  aieblas.json
verification/iamax/src/: host.cpp
verification/nrm2/: CMakeLists.txt  aieblas.json  build.sh
verification/nrm2/src/: host.cpp
verification/rot/: CMakeLists.txt  aieblas.json
verification/rot/src/: host.cpp
verification/scal/: CMakeLists.txt  aieblas.json
verification/scal/src/: host.cpp
